@@ -1,6 +1,4 @@
-# Dual processor, but make doesn't detect conflicts properly
-MAKEJOBFLAGS =
-# Can build for Linux x86 and win32 x86
-# mlh: Aug 24 2002 Disabled for now until the cross compilation tools
-# are re-added.
+# Dual processor
+MAKEJOBFLAGS = "-j 2"
+# cross-tools installed in HOME
 OTHERTARGETS = i586-mingw32msvc
